[project]
name = "yoot"
version = "0.1.0"
description = "Yet another Opinionated Orchestration Tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["pydantic>=2.9.2", "typer>=0.12.5"]

[project.scripts]
yoot = "yoot.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pyright>=1.1.384", "pytest>=8.3.3", "ruff>=0.6.9"]
